<resources>
    <string name="app_name">belief</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_error">出错了</string>
    <string name="api_retry_error">请重试</string>
    <string name="api_default_error">业务出错</string>
    <string name="connection_error">网络连接失败</string>

    <!--bottom navigation-->
    <string name="bottom_nav_sport">运动</string>
    <string name="bottom_nav_recipe">发现</string>
    <string name="bottom_nav_comm">社区</string>
    <string name="bottom_nav_user">我</string>

    <!--toolbar title-->
    <string name="top_title_sport">课程推荐</string>
    <string name="top_title_recipe">健康饮食</string>
    <string name="top_title_comm">交流健身</string>
    <string name="top_title_user">个人信息</string>
    <string name="top_title_class_list">我的课程</string>
    <string name="top_title_add_class">添加课程</string>


    <!--sport class tab-->
    <string name="tab_allclass">全部</string>
    <string name="tab_done">已完成</string>
    <string name="tab_doing">进行中</string>


    <!--User-->
    <string name="edit">点击编辑</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="data">我的数据</string>
    <string name="course">我的课程</string>
    <string name="favorite">我的收藏</string>
    <string name="diet">我的饮食</string>
    <string name="total_movement">总运动（分钟）</string>
    <string name="today_movement">今日运动（分钟）</string>
    <string name="cumulative_consumption">累计消耗（千卡）</string>
    <string name="person_information">个人资料</string>
    <string name="save">保存</string>
    <string name="change_avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="birthday">生日</string>
    <string name="city">城市</string>
    <string name="introduction">简介</string>

    <!--recipe-->
    <string name="stable_food">主食</string>
    <string name="breakfast">早餐</string>
    <string name="food_name">豆汁</string>
    <string name="food_element">含有少量蛋白，淀粉，矿物质</string>
    <string name="food_heat">热量</string>
    <string name="menu_kind">场景</string>
    <string name="health_foodname">鲜果牛奶果酸乳</string>
    <string name="health_likenum">8491</string>
    <string name="total_heart">总热量</string>
    <string name="check_in">打卡</string>
    <string name="lunch">中餐</string>
    <string name="dinner">晚餐</string>
    <string name="diet_guide">饮食指南</string>
    <string name="classified_recipe">分类菜谱</string>
    <string name="recipe_list">食谱列表</string>
    <string name="food_library">食物库</string>
    <string name="food_kcal"> Kcal/100g</string>
    <string name="detail_kcal">千卡</string>
    <string name="detail_cw">碳水</string>
    <string name="detail_pro">蛋白质</string>
    <string name="detail_fat">脂肪</string>

    <!--零基础适应性训练-->
    <string name="fat_burning">燃脂</string>
    <string name="often">时常</string>
    <string name="difficult">难度</string>
    <string name="no_apparatus">无器械</string>


    <!--社区-->
    <string name="everyone_wactching">大家都在看</string>
    <string name="dynamic_details">动态详情</string>
    <string name="dynamic_share">发布动态</string>
    <string name="com_name">跟李老师一起爱上开发</string>
    <string name="com_name1">李晓蕾</string>
    
    <!--运动-->
    <string name="add_class">+添加课程</string>
    
</resources>
