<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/details_rl_1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textSize="25sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_element"
                android:layout_marginLeft="30dp"
                android:textSize="15sp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/sport_drill"
                android:layout_alignParentBottom="true"></TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/details_rl_2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@id/details_rl_1"
            android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="营养价值（每100g可食部分）"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"></TextView>

                <RelativeLayout
                    android:id="@+id/details_rl_3"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="90dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food_heat"
                        android:textSize="17sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="10.0kcal"
                        android:textSize="17sp"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/sport_drill"
                        android:layout_alignParentBottom="true"></TextView>
                </RelativeLayout>

            <RelativeLayout
                android:id="@+id/details_rl_4"
                android:layout_below="@id/details_rl_3"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_heat"
                    android:textSize="17sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="10.0kcal"
                    android:textSize="17sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/sport_drill"
                    android:layout_alignParentBottom="true"></TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/details_rl_5"
                android:layout_below="@id/details_rl_4"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_heat"
                    android:textSize="17sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="10.0kcal"
                    android:textSize="17sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/sport_drill"
                    android:layout_alignParentBottom="true"></TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/details_rl_6"
                android:layout_below="@id/details_rl_5"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_heat"
                    android:textSize="17sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="10.0kcal"
                    android:textSize="17sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/sport_drill"
                    android:layout_alignParentBottom="true"></TextView>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>